// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deve aceitar Flow props 1`] = `
.emotion-3 {
  margin: 0 -0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  margin-top: 1rem;
  margin-right: 0.5rem;
  margin-bottom: 1rem;
  margin-left: 0.5rem;
  display: inline-block;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`deve renderizar corretamente 1`] = `
.emotion-3 {
  margin: 0 -0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.5rem;
  margin-bottom: 0rem;
  margin-left: 0.5rem;
  display: inline-block;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;
